@@ -1,43 +1,136 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project name="TUBES_PBO_Kelompok 9" default="default" basedir=".">
     <description>Builds, tests, and runs the project TUBES_PBO_Kelompok 9.</description>
-
     <!-- Define directories -->
     <property name="build.dir" value="build"/>
+    <property name="build.classes.dir" value="${build.dir}/classes"/>
+    <property name="build.test.dir" value="${build.dir}/test"/>
     <property name="dist.dir" value="dist"/>
     <property name="src.dir" value="src"/>
+    <property name="test.dir" value="test"/>
+    <property name="lib.dir" value="lib"/>
+
+    <!-- Define classpath for the project -->
+    <path id="project.classpath">
+        <fileset dir="${lib.dir}">
+            <include name="mysql-connector-j-9.1.0.jar"/>
+            <include name="mockito-core-4.11.0.jar"/>
+            <include name="mockito-inline-4.11.0.jar"/> <!-- Added mockito-inline -->
+            <include name="junit-4.13.2.jar"/>
+            <include name="hamcrest-core-1.3.jar"/>
+            <include name="byte-buddy-1.12.22.jar"/>
+            <include name="byte-buddy-agent-1.12.22.jar"/>
+            <include name="objenesis-3.3.jar"/>
+            <include name="powermock-core-2.0.9.jar"/>
+            <include name="powermock-api-mockito2-2.0.9.jar"/>
+            <include name="powermock-module-junit4-2.0.9.jar"/>
+            <include name="javassist-3.29.2-GA.jar"/> <!-- Added for PowerMock -->
+            <include name="powermock-api-support-2.0.9.jar"/>
+            <include name="powermock-reflect-2.0.9.jar"/>
+            <include name="powermock-module-junit4-common-2.0.9.jar"/>
+        </fileset>
+        <pathelement location="${build.classes.dir}"/>
+        <pathelement location="${build.test.dir}"/>
+    </path>
 
     <!-- Import the NetBeans build implementation -->
     <import file="nbproject/build-impl.xml"/>
 
-    <!-- Override the macro for javac compilation to set Java version -->
-    <target name="-init-macrodef-javac">
-        <macrodef name="javac">
-            <attribute name="srcdir" default="${src.dir}"/>
-            <attribute name="destdir" default="${build.dir}"/>
-            <sequential>
-                <javac srcdir="@{srcdir}" destdir="@{destdir}" source="17" target="17">
-                    <classpath>
-                        <path refid="project.class.path"/>
-                    </classpath>
-                </javac>
-            </sequential>
-        </macrodef>
-    </target>
-
+    <!-- Clean build and dist directories -->
     <target name="clean">
         <delete dir="${build.dir}"/>
+        <delete dir="${dist.dir}"/>
     </target>
 
+    <!-- Initialize build directories -->
     <target name="init">
         <mkdir dir="${build.dir}"/>
+        <mkdir dir="${build.classes.dir}"/>
+        <mkdir dir="${build.test.dir}"/>
         <mkdir dir="${dist.dir}"/>
+        <mkdir dir="${lib.dir}"/>
     </target>
 
-    <target name="jar" depends="init">
-        <jar destfile="${dist.dir}/TUBES_PBO_Kelompok_9.jar" basedir="${build.dir}"/>
+    <!-- Download missing dependencies -->
+    <target name="resolve-dependencies" depends="init">
+        <get src="https://repo1.maven.org/maven2/org/mockito/mockito-core/4.11.0/mockito-core-4.11.0.jar"
+            dest="${lib.dir}/mockito-core-4.11.0.jar"
+            skipexisting="true"/>
+        <get src="https://repo1.maven.org/maven2/org/mockito/mockito-inline/4.11.0/mockito-inline-4.11.0.jar"
+            dest="${lib.dir}/mockito-inline-4.11.0.jar"
+            skipexisting="true"/>
+        <get src="https://repo1.maven.org/maven2/net/bytebuddy/byte-buddy/1.12.22/byte-buddy-1.12.22.jar"
+            dest="${lib.dir}/byte-buddy-1.12.22.jar"
+            skipexisting="true"/>
+        <get src="https://repo1.maven.org/maven2/net/bytebuddy/byte-buddy-agent/1.12.22/byte-buddy-agent-1.12.22.jar"
+            dest="${lib.dir}/byte-buddy-agent-1.12.22.jar"
+            skipexisting="true"/>
     </target>
 
-    <target name="default" depends="clean, jar"/>
+    <!-- Compile main sources -->
+    <target name="compile" depends="init,resolve-dependencies">
+        <javac srcdir="${src.dir}" 
+               destdir="${build.classes.dir}" 
+               includeantruntime="false"
+               debug="true"
+               source="17" 
+               target="17">
+            <classpath refid="project.classpath"/>
+        </javac>
+    </target>
 
+    <!-- Compile test sources -->
+    <target name="compile-test" depends="compile">
+        <javac srcdir="${test.dir}" 
+               destdir="${build.test.dir}" 
+               includeantruntime="false"
+               debug="true"
+               source="17" 
+               target="17">
+            <classpath refid="project.classpath"/>
+        </javac>
+    </target>
+
+    <!-- Run JUnit tests -->
+    <target name="test" depends="compile-test">
+        <junit printsummary="yes" haltonfailure="yes" fork="yes" showoutput="yes">
+            <jvmarg value="--add-opens=java.base/java.lang=ALL-UNNAMED"/>
+            <jvmarg value="--add-opens=java.base/java.io=ALL-UNNAMED"/>
+            <jvmarg value="--add-opens=java.base/java.util=ALL-UNNAMED"/>
+            <jvmarg value="-XX:+IgnoreUnrecognizedVMOptions"/>
+            <classpath>
+                <path refid="project.classpath"/>
+                <pathelement location="${build.test.dir}"/>
+            </classpath>
+            <formatter type="plain" usefile="false"/>
+            <batchtest fork="yes">
+                <fileset dir="${test.dir}">
+                    <include name="**/*Test.java"/>
+                    <include name="**/Test*.java"/>
+                    <include name="**/test.java"/>
+                </fileset>
+            </batchtest>
+        </junit>
+    </target>
+
+
+    <!-- Run a specific test class -->
+    <target name="run-single-test" depends="compile-test">
+        <junit printsummary="yes" haltonfailure="yes" fork="yes" showoutput="yes">
+            <classpath>
+                <path refid="project.classpath"/>
+                <pathelement location="${build.test.dir}"/>
+            </classpath>
+            <formatter type="plain" usefile="false"/>
+            <test name="${test.class}"/>
+        </junit>
+    </target>
+
+    <!-- Package compiled classes into a JAR -->
+    <target name="jar" depends="compile">
+        <jar destfile="${dist.dir}/TUBES_PBO_Kelompok_9.jar" basedir="${build.classes.dir}"/>
+    </target>
+
+    <!-- Default target -->
+    <target name="default" depends="clean, compile, jar, test"/>
 </project>
